ANTLRGenerated/PLSRulesParser.py
# Generated from PLSRules.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PLSRulesParser ( Parser ):

    grammarFileName = "PLSRules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'POLACZ'", "'ROZLACZ'", "'RAZY'", "'PODZIEL'", 
                     "'SWOJA_DROGA'", "'FUNKCJA'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'ROWNE'", "'ROZNE'", "'TO'", 
                     "'WIEKSZE '", "'MNIEJSZE '", "'<='", "'>='", "'LUB'", 
                     "'I'", "'NIE'", "'POKI'", "'PETLA'", "'JESLI'", "'LUB_JESLI'", 
                     "'INACZEJ'", "'ZWROC'", "'PRAWDA'", "'FALSZ'", "'OD'", 
                     "'ZABIERZ'", "':'", "<INVALID>", "'SKONCZ'", "'DALEJ'", 
                     "'PLUSIK'", "'\\r\\n'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'LICZBA '", "'TEKST'", "'BOOL'", "','", "'DO'", "'WYPISZ'", 
                     "'KONIEC'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "MNOZENIE", "DZIELENIE", 
                      "KOMENTARZ", "FUNKCJA", "LNAWIAS_OKRAGLY", "PNAWIAS_OKRAGLY", 
                      "LNAWIAS_KLAMROWY", "PNAWIAS_KLAMROWY", "LNAWIAS_KWADRATOWY", 
                      "PNAWIAS_KWADRATOWY", "ROWNE", "ROZNE", "PODSTAW", 
                      "WIEKSZE", "MNIEJSZE", "MNIEJSZE_ROWNE", "WIEKSZE_ROWNE", 
                      "ALTERNATYWA", "KONIUNKCJA", "NEGACJA", "WHILE", "FOR", 
                      "IF", "ELIF", "ELSE", "RETURN", "PRAWDA", "FALSZ", 
                      "OD", "IMPORT", "DWUKROPEK", "NAPIS", "PRZERWIJ", 
                      "KONTYNUUJ", "ZWIEKSZ", "KONIEC_LINII", "NUMERYCZNY", 
                      "ID", "SPACJA", "INT", "STRING", "BOOL", "PRZECINEK", 
                      "DO", "PRINT", "KONIEC" ]

    RULE_program = 0
    RULE_kod = 1
    RULE_typWartosci = 2
    RULE_deklaracjaWartosci = 3
    RULE_przypisanieWartosci = 4
    RULE_deklaracjaFunkcji = 5
    RULE_wywolanieFunkcji = 6
    RULE_wyrazenie = 7
    RULE_wartosc = 8
    RULE_wyrazenieString = 9
    RULE_wyrazenieBool = 10
    RULE_wyrazenieArytmetyczne = 11
    RULE_wyrazenieDrukowania = 12
    RULE_wyrazenieFor = 13
    RULE_wyrazenieWhile = 14
    RULE_wyrazenieWarunkowe = 15
    RULE_wyrazenieElif = 16
    RULE_wyrazenieElse = 17
    RULE_listaArgumentow = 18
    RULE_wszystkieArgumenty = 19
    RULE_petla = 20
    RULE_listaWartosci = 21
    RULE_wszystkieWartosci = 22

    ruleNames =  [ "program", "kod", "typWartosci", "deklaracjaWartosci", 
                   "przypisanieWartosci", "deklaracjaFunkcji", "wywolanieFunkcji", 
                   "wyrazenie", "wartosc", "wyrazenieString", "wyrazenieBool", 
                   "wyrazenieArytmetyczne", "wyrazenieDrukowania", "wyrazenieFor", 
                   "wyrazenieWhile", "wyrazenieWarunkowe", "wyrazenieElif", 
                   "wyrazenieElse", "listaArgumentow", "wszystkieArgumenty", 
                   "petla", "listaWartosci", "wszystkieWartosci" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    MNOZENIE=3
    DZIELENIE=4
    KOMENTARZ=5
    FUNKCJA=6
    LNAWIAS_OKRAGLY=7
    PNAWIAS_OKRAGLY=8
    LNAWIAS_KLAMROWY=9
    PNAWIAS_KLAMROWY=10
    LNAWIAS_KWADRATOWY=11
    PNAWIAS_KWADRATOWY=12
    ROWNE=13
    ROZNE=14
    PODSTAW=15
    WIEKSZE=16
    MNIEJSZE=17
    MNIEJSZE_ROWNE=18
    WIEKSZE_ROWNE=19
    ALTERNATYWA=20
    KONIUNKCJA=21
    NEGACJA=22
    WHILE=23
    FOR=24
    IF=25
    ELIF=26
    ELSE=27
    RETURN=28
    PRAWDA=29
    FALSZ=30
    OD=31
    IMPORT=32
    DWUKROPEK=33
    NAPIS=34
    PRZERWIJ=35
    KONTYNUUJ=36
    ZWIEKSZ=37
    KONIEC_LINII=38
    NUMERYCZNY=39
    ID=40
    SPACJA=41
    INT=42
    STRING=43
    BOOL=44
    PRZECINEK=45
    DO=46
    PRINT=47
    KONIEC=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KONIEC(self):
            return self.getToken(PLSRulesParser.KONIEC, 0)

        def kod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesParser.KodContext)
            else:
                return self.getTypedRuleContext(PLSRulesParser.KodContext,i)


        def getRuleIndex(self):
            return PLSRulesParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PLSRulesParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 172623652716640) != 0):
                self.state = 46
                self.kod()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(PLSRulesParser.KONIEC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def wyrazenie(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieContext,0)


        def KONIEC_LINII(self):
            return self.getToken(PLSRulesParser.KONIEC_LINII, 0)

        def kod(self):
            return self.getTypedRuleContext(PLSRulesParser.KodContext,0)


        def KOMENTARZ(self):
            return self.getToken(PLSRulesParser.KOMENTARZ, 0)

        def getRuleIndex(self):
            return PLSRulesParser.RULE_kod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKod" ):
                listener.enterKod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKod" ):
                listener.exitKod(self)




    def kod(self):

        localctx = PLSRulesParser.KodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_kod)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.wyrazenie()
                self.state = 55
                self.match(PLSRulesParser.KONIEC_LINII)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.wyrazenie()
                self.state = 58
                self.match(PLSRulesParser.KONIEC_LINII)
                self.state = 59
                self.kod()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(PLSRulesParser.KOMENTARZ)
                self.state = 62
                self.kod()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypWartosciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PLSRulesParser.INT, 0)

        def STRING(self):
            return self.getToken(PLSRulesParser.STRING, 0)

        def BOOL(self):
            return self.getToken(PLSRulesParser.BOOL, 0)

        def SPACJA(self):
            return self.getToken(PLSRulesParser.SPACJA, 0)

        def getRuleIndex(self):
            return PLSRulesParser.RULE_typWartosci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypWartosci" ):
                listener.enterTypWartosci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypWartosci" ):
                listener.exitTypWartosci(self)




    def typWartosci(self):

        localctx = PLSRulesParser.TypWartosciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typWartosci)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30786325577728) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 66
                self.match(PLSRulesParser.SPACJA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeklaracjaWartosciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typWartosci(self):
            return self.getTypedRuleContext(PLSRulesParser.TypWartosciContext,0)


        def ID(self):
            return self.getToken(PLSRulesParser.ID, 0)

        def PODSTAW(self):
            return self.getToken(PLSRulesParser.PODSTAW, 0)

        def wartosc(self):
            return self.getTypedRuleContext(PLSRulesParser.WartoscContext,0)


        def getRuleIndex(self):
            return PLSRulesParser.RULE_deklaracjaWartosci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeklaracjaWartosci" ):
                listener.enterDeklaracjaWartosci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeklaracjaWartosci" ):
                listener.exitDeklaracjaWartosci(self)




    def deklaracjaWartosci(self):

        localctx = PLSRulesParser.DeklaracjaWartosciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_deklaracjaWartosci)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.typWartosci()
            self.state = 70
            self.match(PLSRulesParser.ID)
            self.state = 71
            self.match(PLSRulesParser.PODSTAW)
            self.state = 72
            self.wartosc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrzypisanieWartosciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PLSRulesParser.ID, 0)

        def PODSTAW(self):
            return self.getToken(PLSRulesParser.PODSTAW, 0)

        def wartosc(self):
            return self.getTypedRuleContext(PLSRulesParser.WartoscContext,0)


        def getRuleIndex(self):
            return PLSRulesParser.RULE_przypisanieWartosci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrzypisanieWartosci" ):
                listener.enterPrzypisanieWartosci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrzypisanieWartosci" ):
                listener.exitPrzypisanieWartosci(self)




    def przypisanieWartosci(self):

        localctx = PLSRulesParser.PrzypisanieWartosciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_przypisanieWartosci)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PLSRulesParser.ID)
            self.state = 75
            self.match(PLSRulesParser.PODSTAW)
            self.state = 76
            self.wartosc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeklaracjaFunkcjiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNKCJA(self):
            return self.getToken(PLSRulesParser.FUNKCJA, 0)

        def ID(self):
            return self.getToken(PLSRulesParser.ID, 0)

        def LNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesParser.LNAWIAS_OKRAGLY, 0)

        def wszystkieArgumenty(self):
            return self.getTypedRuleContext(PLSRulesParser.WszystkieArgumentyContext,0)


        def PNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesParser.PNAWIAS_OKRAGLY, 0)

        def LNAWIAS_KLAMROWY(self):
            return self.getToken(PLSRulesParser.LNAWIAS_KLAMROWY, 0)

        def kod(self):
            return self.getTypedRuleContext(PLSRulesParser.KodContext,0)


        def RETURN(self):
            return self.getToken(PLSRulesParser.RETURN, 0)

        def wartosc(self):
            return self.getTypedRuleContext(PLSRulesParser.WartoscContext,0)


        def PNAWIAS_KLAMROWY(self):
            return self.getToken(PLSRulesParser.PNAWIAS_KLAMROWY, 0)

        def getRuleIndex(self):
            return PLSRulesParser.RULE_deklaracjaFunkcji

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeklaracjaFunkcji" ):
                listener.enterDeklaracjaFunkcji(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeklaracjaFunkcji" ):
                listener.exitDeklaracjaFunkcji(self)




    def deklaracjaFunkcji(self):

        localctx = PLSRulesParser.DeklaracjaFunkcjiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deklaracjaFunkcji)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(PLSRulesParser.FUNKCJA)
            self.state = 79
            self.match(PLSRulesParser.ID)
            self.state = 80
            self.match(PLSRulesParser.LNAWIAS_OKRAGLY)
            self.state = 81
            self.wszystkieArgumenty()
            self.state = 82
            self.match(PLSRulesParser.PNAWIAS_OKRAGLY)
            self.state = 83
            self.match(PLSRulesParser.LNAWIAS_KLAMROWY)
            self.state = 84
            self.kod()
            self.state = 85
            self.match(PLSRulesParser.RETURN)
            self.state = 86
            self.wartosc()
            self.state = 87
            self.match(PLSRulesParser.PNAWIAS_KLAMROWY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WywolanieFunkcjiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PLSRulesParser.ID, 0)

        def LNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesParser.LNAWIAS_OKRAGLY, 0)

        def wszystkieWartosci(self):
            return self.getTypedRuleContext(PLSRulesParser.WszystkieWartosciContext,0)


        def PNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesParser.PNAWIAS_OKRAGLY, 0)

        def getRuleIndex(self):
            return PLSRulesParser.RULE_wywolanieFunkcji

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWywolanieFunkcji" ):
                listener.enterWywolanieFunkcji(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWywolanieFunkcji" ):
                listener.exitWywolanieFunkcji(self)




    def wywolanieFunkcji(self):

        localctx = PLSRulesParser.WywolanieFunkcjiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_wywolanieFunkcji)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PLSRulesParser.ID)
            self.state = 90
            self.match(PLSRulesParser.LNAWIAS_OKRAGLY)
            self.state = 91
            self.wszystkieWartosci()
            self.state = 92
            self.match(PLSRulesParser.PNAWIAS_OKRAGLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WyrazenieContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deklaracjaWartosci(self):
            return self.getTypedRuleContext(PLSRulesParser.DeklaracjaWartosciContext,0)


        def przypisanieWartosci(self):
            return self.getTypedRuleContext(PLSRulesParser.PrzypisanieWartosciContext,0)


        def wyrazenieDrukowania(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieDrukowaniaContext,0)


        def wyrazenieFor(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieForContext,0)


        def wyrazenieWhile(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieWhileContext,0)


        def wyrazenieWarunkowe(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieWarunkoweContext,0)


        def KONIEC(self):
            return self.getToken(PLSRulesParser.KONIEC, 0)

        def wywolanieFunkcji(self):
            return self.getTypedRuleContext(PLSRulesParser.WywolanieFunkcjiContext,0)


        def deklaracjaFunkcji(self):
            return self.getTypedRuleContext(PLSRulesParser.DeklaracjaFunkcjiContext,0)


        def RETURN(self):
            return self.getToken(PLSRulesParser.RETURN, 0)

        def wartosc(self):
            return self.getTypedRuleContext(PLSRulesParser.WartoscContext,0)


        def getRuleIndex(self):
            return PLSRulesParser.RULE_wyrazenie

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWyrazenie" ):
                listener.enterWyrazenie(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWyrazenie" ):
                listener.exitWyrazenie(self)




    def wyrazenie(self):

        localctx = PLSRulesParser.WyrazenieContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_wyrazenie)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.deklaracjaWartosci()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.przypisanieWartosci()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.wyrazenieDrukowania()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.wyrazenieFor()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.wyrazenieWhile()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.wyrazenieWarunkowe()
                self.state = 100
                self.match(PLSRulesParser.KONIEC)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.wywolanieFunkcji()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 103
                self.deklaracjaFunkcji()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 104
                self.match(PLSRulesParser.RETURN)
                self.state = 105
                self.wartosc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WartoscContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def wyrazenieString(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieStringContext,0)


        def wyrazenieBool(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieBoolContext,0)


        def wyrazenieArytmetyczne(self):
            return self.getTypedRuleContext(PLSRulesParser.WyrazenieArytmetyczneContext,0)


        def ID(self):
            return self.getToken(PLSRulesParser.ID, 0)

        def wywolanieFunkcji(self):
            return self.getTypedRuleContext(PLSRulesParser.WywolanieFunkcjiContext,0)


        def getRuleIndex(self):
            return PLSRulesParser.RULE_wartosc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWartosc" ):
                listener.enterWartosc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWartosc" ):
                listener.exitWartosc(self)




    def wartosc(self):

        localctx = PLSRulesParser.WartoscContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_wartosc)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.wyrazenieString(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.wyrazenieBool(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.wyrazenieArytmetyczne(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.match(PLSRulesParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.wywolanieFunkcji()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WyrazenieStringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAPIS(self):
            return self.getToken(PLSRulesParser.NAPIS, 0)

        def ID(self):
            return self.getToken(PLSRulesParser.ID, 0)

        def LNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesParser.LNAWIAS_OKRAGLY, 0)

        def wyrazenieString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesParser.WyrazenieStringContext)
            else:
                return self.getTypedRuleContext(PLSRulesParser.WyrazenieStringContext,i)


        def PNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesParser.PNAWIAS_OKRAGLY, 0)

        def wywolanieFunkcji(self):
            return self.getTypedRuleContext(PLSRulesParser.WywolanieFunkcjiContext,0)


        def ZWIEKSZ(self):
            return self.getToken(PLSRulesParser.ZWIEKSZ, 0)

        def getRuleIndex(self):
            return PLSRulesParser.RULE_wyrazenieString

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWyrazenieString" ):
                listener.enterWyrazenieString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWyrazenieString" ):
                listener.exitWyrazenieString(self)



    def wyrazenieString(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PLSRulesParser.WyrazenieStringContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_wyrazenieString, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 116
                self.match(PLSRulesParser.NAPIS)
                pass

            elif la_ == 2:
                self.state = 117
                self.match(PLSRulesParser.ID)
                pass

            elif la_ == 3:
                self.state = 118
                self.match(PLSRulesParser.LNAWIAS_OKRAGLY)
                self.state = 119
                self.wyrazenieString(0)
                self.state = 120
                self.match(PLSRulesParser.PNAWIAS_OKRAGLY)
                pass

            elif la_ == 4:
                self.state = 122
                self.wywolanieFunkcji()
                pass

